--- a/miniprogram/pages/details/detail..wxml
+++ b/miniprogram/pages/details/detail..wxml
@@ -21,40 +21,39 @@
       </swiper>
   </view>
   <!--nav-->
-  <!-- <view class="nav_top">
+  <view class="nav_top">
     <block wx:for="{{navTopItems}}" wx:key="item.id">
       <view class="nav_top_items {{curNavId == item.id ? 'active_'+colors[index] : ''}}" bindtap="switchTab" data-index="{{index}}" data-id="{{item.id}}">
         <image src="{{item.icon}}" mode="aspectFill"></image>
         <text>{{item.title}}</text>
       </view>
     </block>
-  </view> -->
+  </view>
   <!--list-->
-  <view class="storeList">附近商家</view>
   <view class="nav_section">
-    <view wx:if="{{storeList.length>0}}">
-        <block wx:for="{{storeList}}" wx:key="index">
+    <view wx:if="{{list[curIndex]}}">
+        <block wx:for="{{list[curIndex]}}" wx:key="item.id">
             <view class="nav_section_items" >
                 <!--image-->
-                <view class="section_image">
-                <block wx:if="{{item.img}}">
-                    <image src="{{item.img}}" mode="aspectFill"></image>
+                <view class="section_image" bindtap="navigateDetail" data-aid="{{item.id}}">
+                <block wx:if="{{item.coverpath}}">
+                    <image src="{{item.coverpath}}" mode="aspectFill"></image>
                 </block>
                 <block wx:else>
                     <image src="../../images/default_pic.png" mode="aspectFill"></image>
                 </block>
                 </view>
                 <!--content-->
-                <view class="section_cont" >
+                <view class="section_cont" bindtap="navigateDetail" data-aid="{{item.id}}">
                     <view class="section_cont_sub">
-                        <text>{{item.name}}</text>
+                        <text>{{item.subject}}</text>
                     </view>
-                    <view class="section_cont_price">{{item.describle}}</view>
-                    <view>{{item.address}}</view>
+                    <view class="section_cont_price">价格：{{item.price}}</view>
+                    <view>{{item.message}}</view>
                 </view>
                 <!--book-->
-                <view class="section_book" bindtap="toDetail" data-id="{{item.id}}">
-                        <text>详情</text>
+                <view class="section_book" bindtap="bookTap" data-aid="{{item.id}}">
+                        <text>预约</text>
                 </view>
             </view>
             
