--- a/miniprogram/pages/technician/technician.wxss
+++ b/miniprogram/pages/technician/technician.wxss
@@ -1,83 +1,26 @@
 /**index.wxss**/
-/* 轮播图 */
-.swiper{
+.container{
+    padding:0;
+    margin:0;
+}
+.ar_picker{
     width:100%;
-    margin:0rpx;
+    font-size:30rpx;
+    color:#000;
+    background: #efeff4;
+    margin:0;
+    padding:10rpx 0rpx;
 }
-.swiper image{
-    display: inline;
-}
-.storeList{
-    text-align: center;
-    padding: 16px;
-    font-size: 20px;
-    font-weight: bold;
-    color: #fff;
-    background:url("https://wly-1254337200.cos.ap-guangzhou.myqcloud.com/black_line.png") repeat;
-}
-/* 搜索 */
-.search{
-    width:100%;
-    height:90rpx;
-    background:#efeff4;
-    border-bottom:2rpx solid #ddd;
-    font-size:28rpx;
-    padding-top:25rpx;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.search_input{
-    width:610rpx;
-    height:64rpx;
-    border:1rpx solid #ddd;
-    border-radius:12rpx;
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    background: #ffffff;
-    margin-left:10rpx;
-    padding:0rpx 10rpx;
-    box-sizing:border-box;
-}
-.search_input .arrow_down_icon{
-    width:24rpx;
-    height:14rpx;
-    margin: 26rpx 10rpx;
-}
-.search_input .search_icon{
-    width:34rpx;
-    height:34rpx;
-    margin: 15rpx 10rpx 15rpx 20rpx;
-}
-.search_input .search_icon image,
-.search_input .arrow_down_icon image{
-    width:100%;
-    height: 100%;
-    display: block;
-}
-.search_input input{
-    width:470rpx;
-    height:64rpx;
-    line-height: 64rpx;
-    padding:4rpx 20rpx;
-    font-size:28rpx;
-    font-family:'微软雅黑';
-    box-sizing:border-box;
-    color:#a9a9a9;
-}
-.search_input picker{
-    height:64rpx;
-    line-height: 64rpx;
-    text-align: center;
-    color:#585858;
-    margin-left:6rpx;
-}
-.search .search_btn{
-    margin-top:14rpx;
-    color:#38b337;
-    font-size:32rpx;
-    margin-right:10rpx;
+
+.ar_picker .ar_picker_wrap{
+    width: 670rpx;
+    background: #fff url("https://wly-1254337200.cos.ap-guangzhou.myqcloud.com/arrow.png") no-repeat right center;
+    background-size:25rpx 14rpx;
+    background-position:650rpx;
+    border-radius:20rpx;
+    padding:10rpx 30rpx;
+    margin:10rpx auto;
+    border:1px solid #ddd;
 }
 /* 导航条 */
 .nav_top{
@@ -146,10 +89,9 @@
     height:100%;
 }
 .nav_section_items .section_cont{
-    width:400rpx;
+    width:380rpx;
     font-size:26rpx;
     color:#a9a9a9;
-    
 }
 .nav_section_items .section_cont view{
     overflow:hidden;
@@ -174,13 +116,13 @@
     color:#d24a58;
 }
 .nav_section_items .section_book{
-    width:80rpx;
     height:80rpx;
     font-size:26rpx;
-    border-radius:100%;
-    background:#d24a58;
+    background:url("https://wly-1254337200.cos.ap-guangzhou.myqcloud.com/location.png") no-repeat left;
+    background-size:17rpx 28rpx;
     line-height: 80rpx;
-    color:#fff;
-    text-align: center;
+    color:#d24a58;
+    text-align: left;
     margin-top:35rpx;
+    padding-left:30rpx;
 }
