--- a/miniprogram/pages/user/user.wxss
+++ b/miniprogram/pages/user/user.wxss
@@ -9,8 +9,7 @@
     flex-direction: row;
     justify-content: center;
     font-size:30rpx;
-    padding:80rpx 0rpx;
-    background:url('https://wly-1254337200.cos.ap-guangzhou.myqcloud.com/black_line.png') repeat;
+    margin:80rpx 0rpx;
 }
 .user_base_info .user_avatar{
     width:200rpx;
@@ -58,7 +57,7 @@
 }
 .user_addr_item .addr_edit{
     width:50rpx;
-    background:url("https://wly-1254337200.cos.ap-guangzhou.myqcloud.com/edit.png") no-repeat;
+    background:url(https://wly-1254337200.cos.ap-guangzhou.myqcloud.com/edit.png) no-repeat;
     background-position: center;
     background-size:100%;  
 }
